k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-api-svc
  namespace: whatsapp
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: whatsapp-api
  type: ClusterIP
