k8/ingress.yml
# THIS INGRESS IS USING NGINX INGRESS CONTROLLER

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: UserEmail,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,x-source,authorization,X-API-Key,Cookie
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "720"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "720"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: whatsapp-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mail.thebikerentals.com
    secretName: tls-secret   # kubectl create secret tls tls-secret --cert=tls.crt --key=tls.key -n whatsapp
  rules:
  - host: mail.thebikerentals.com
    http:
      paths:
      - backend:
          service:
            name: whatsapp-api-svc
            port:
              number: 3000
        path: /?(.*)
        pathType: ImplementationSpecific
